# virtualfish

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.mdown  RELEASE.md  auto_activation.fish  environment_variables.fish  global_requirements.fish  pyproject.toml  readthedocs_requirements.txt  setup.py  tox.ini  virtual.fish
.circleci/: config.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---documentation.md  ---everything-else.md  ---feature-request.md
.github/workflows/: main.yml
docs/: Makefile  conf.py  extend.rst  faq.rst  index.rst  install.rst  plugins.rst  seealso.rst  usage.rst
virtualfish/: __main__.py  auto_activation.fish  compat_aliases.fish  environment.fish  global_requirements.fish  projects.fish  update_python.fish  virtual.fish
virtualfish/loader/: __init__.py  cli.py  installer.py
virtualfish/test/: conftest.py  repl.fish  repl.py  test_activate.py  test_addpath.py  test_deactivate.py  test_loader.py  test_repl.py  test_rm.py
